@@ -1,8 +1,12 @@
 <%
 String callback = request.getParameter("callback");
-if (callback == null || callback.equals("")) { %>
+String acceptHeader = request.getHeader("accept");
+if ((callback == null || callback.equals("")) && !acceptHeader.equalsIgnoreCase("application/json")) { %>
 <html><head><title>Apache Tomcat/6.0.18 - Error report</title><style><!--H1 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:22px;} H2 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:16px;} H3 {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;font-size:14px;} BODY {font-family:Tahoma,Arial,sans-serif;color:black;background-color:white;} B {font-family:Tahoma,Arial,sans-serif;color:white;background-color:#525D76;} P {font-family:Tahoma,Arial,sans-serif;background:white;color:black;font-size:12px;}A {color : black;}A.name {color : black;}HR {color : #525D76;}--></style> </head><body><h1>HTTP Status 401 - </h1><HR size="1" noshade="noshade"><p><b>type</b> Status report</p><p><b>message</b> <u></u></p><p><b>description</b> <u>This request requires HTTP authentication ().</u></p><HR size="1" noshade="noshade"><h3>Apache Tomcat/6.0.18</h3></body></html>
 <%
+} else if(acceptHeader.equalsIgnoreCase("application/json")) {
+   response.setStatus(HttpServletResponse.SC_OK);
+   out.println("{\"error\":{\"message\":\"Not authorised\",\"code\":403}}");
 } else {
    response.setStatus(HttpServletResponse.SC_OK);
    out.println(callback + " && " + callback + "({\"error\":{\"message\":\"Not authorised\",\"code\":403}})");
